--- a/puntajes.html
+++ b/puntajes.html
@@ -35,7 +35,7 @@
         <h2 style="color: #3a557c;">Promedio de Tiempo</h2>
         <canvas id="promedioChart" width="400" height="200"></canvas>
 
-        <h2 style="color: #3a557c;">Tiempo por Nivel y Total</h2>
+        <h2 style="color: #3a557c;">Tiempo por Nivel</h2>
         <h3 style="color: #3a557c;">(Al pasar el cursor, aparece el número de lista del alumno y su tiempo)</h3>
         <canvas id="puntajesNivelChart" width="400" height="200"></canvas>
     </div>
