--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
         <div class="col-md-12 text-center">
-            <a href="tu-hipervinculo" class="btn btn-lg btn-custom" style="color: #ffffff;">Descargar Juego</a>
+            <a href="https://drive.google.com/drive/folders/1WMeS5tkDAKegBcuhkyMgVjHFAul5mibW?usp=sharing" class="btn btn-lg btn-custom" style="color: #ffffff;">Descargar Juego</a>
         </div>
     </div>
     
